# prismux

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  PRODUCT.md  README.md  README.zh-CN.md  ROADMAP.md  ROADMAP.zh-CN.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
_bmad/: config.toml  config.user.toml
_bmad-output/brainstorming/: brainstorming-session-2026-06-16-100149.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/automator/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/gds/: config.yaml
_bmad/tea/: config.yaml
_bmad/wds/: config.yaml
apps/omx-menubar/: Package.swift
apps/omx-menubar/Sources/OmxMenubarContractTests/: main.swift
apps/prismux-menubar/: Package.swift
apps/prismux-menubar/Sources/PrismuxMenubarContractTests/: main.swift
assets/prismux-icon/: prismux-mac-icon.icns
crates/omx-app/: Cargo.toml
crates/omx-app/src/: about.rs  api.rs  compatibility.rs  diagnostics.rs  dto.rs  lib.rs  mapper.rs  mutation.rs  query.rs  runtime.rs  settings.rs  support.rs
crates/omx-cli/: Cargo.toml
crates/omx-cli/src/: app.rs  input.rs  main.rs
crates/omx-cli/tests/: usage_cli.rs
crates/omx-core/: Cargo.toml
crates/omx-core/src/: account.rs  error.rs  lib.rs  login_control.rs  plugin.rs  profile.rs  report.rs  state_store.rs  storage.rs  target.rs  usage.rs
crates/omx-menubar-ffi/: Cargo.toml
crates/omx-menubar-ffi/fixtures/menubar/: accounts.response.json  dashboard.response.json  refresh.response.json  reset-credits-count-only.response.json  reset-credits-expiry.response.json  switch.response.json
crates/omx-menubar-ffi/include/: omx_menubar.h
crates/omx-menubar-ffi/src/: lib.rs
crates/omx-plugin-claude/: Cargo.toml
crates/omx-plugin-claude/src/: lib.rs  plugin.rs  registry_io.rs  tests.rs
crates/omx-plugin-codex/: Cargo.toml
crates/omx-plugin-codex/src/: lib.rs  plugin.rs  registry_io.rs  tests.rs
crates/omx-usage-tokscale/: Cargo.toml
crates/omx-usage-tokscale/src/: lib.rs
crates/prismux-app/: Cargo.toml
crates/prismux-app/src/: about.rs  api.rs  compatibility.rs  dto.rs  lib.rs  mapper.rs  mutation.rs  query.rs  runtime.rs  settings.rs  support.rs
crates/prismux-cli/: Cargo.toml
crates/prismux-cli/src/: app.rs  main.rs
crates/prismux-core/: Cargo.toml
crates/prismux-core/src/: error.rs  login_control.rs  platform.rs  plugin.rs  profile.rs  report.rs  state_store.rs  storage.rs  target.rs  usage.rs
crates/prismux-menubar-ffi/: Cargo.toml
crates/prismux-menubar-ffi/fixtures/menubar/: accounts.response.json  dashboard.response.json  refresh.response.json  switch.response.json
crates/prismux-menubar-ffi/include/: prismux_menubar.h
crates/prismux-menubar-ffi/src/: lib.rs
crates/prismux-plugin-claude/: Cargo.toml
crates/prismux-plugin-claude/src/: lib.rs  plugin.rs  tests.rs
crates/prismux-plugin-codex/: Cargo.toml
crates/prismux-plugin-codex/src/: plugin.rs  tests.rs
docs/: ARCHITECTURE.md  BUILD.md  CLI.md  CLI.zh-CN.md  INSTALL.md  INSTALL.zh-CN.md  PRD.md  RELEASE.md  RELEASE.zh-CN.md  menubar-ux-checklist.md  menubar-v1-acceptance-review.md  menubar-v1.md
openspec/changes/account-pool-numbered-import/: design.md  proposal.md  tasks.md
openspec/changes/add-codex-reset-credit-controls/: design.md  proposal.md  tasks.md
openspec/changes/add-menubar-account-auth-import/: design.md  proposal.md  tasks.md
openspec/changes/add-native-menubar-app/: design.md  proposal.md  tasks.md
openspec/changes/add-portable-target-bundle/: design.md  proposal.md  tasks.md
openspec/changes/adopt-prismux-brand-aliases/: design.md  proposal.md  tasks.md
openspec/changes/align-menubar-cli-control-actions/: proposal.md  tasks.md
openspec/changes/archive/add-native-menubar-app/: tasks.md
openspec/changes/archive/align-menubar-cli-control-actions/: design.md
openspec/changes/archive/compose-overview-aggregate-primitives/: proposal.md  tasks.md
openspec/changes/archive/evaluate-tokenbar-menubar-spike/: design.md
openspec/changes/archive/persist-usage-snapshot-on-refresh-failure/: design.md  tasks.md
openspec/changes/archive/provider-usage-statistics/: design.md  tasks.md
openspec/changes/archive/redesign-control-plane-managed-experience/: proposal.md  tasks.md
openspec/changes/claude-profile-import-switch/: design.md  proposal.md  tasks.md
openspec/changes/compose-overview-aggregate-primitives/: design.md  tasks.md
openspec/changes/evaluate-tokenbar-menubar-spike/: proposal.md  tasks.md
openspec/changes/persist-usage-snapshot-on-refresh-failure/: design.md  proposal.md  tasks.md
openspec/changes/prepare-github-launch/: design.md  proposal.md  tasks.md
openspec/changes/provider-usage-statistics/: design.md  proposal.md  tasks.md
openspec/changes/redesign-control-plane-managed-experience/: design.md  proposal.md  tasks.md
openspec/changes/redesign-menubar-settings-footer-experience/: design.md  proposal.md  tasks.md
openspec/changes/redesign-overview-aggregate-view/: design.md  proposal.md  tasks.md
openspec/changes/redesign-usage-ledger-rollups/: design.md  proposal.md  tasks.md
openspec/changes/refine-menubar-control-plane-contract/: design.md
openspec/changes/refine-menubar-notice-and-liquid-glass-experience/: design.md  proposal.md  tasks.md
openspec/changes/refine-menubar-settings-about-experience/: design.md  proposal.md  tasks.md
openspec/changes/refine-usage-cli-and-menubar-blueprint/: design.md  proposal.md  tasks.md
openspec/changes/ship-macos-full-bundle/: design.md  proposal.md  tasks.md
openspec/changes/show-codex-reset-credit-expiry/: design.md  proposal.md  tasks.md
openspec/changes/split-token-usage-stats/: design.md  proposal.md  tasks.md
scripts/: audit-menubar-bundle.sh  build-menubar.sh  bundle-menubar.sh  check-menubar-privacy.sh  check-menubar-version.sh  package-cli.sh
(+102 files in other folders)
