[workspace]
resolver = "3"
members = [
  "crates/omx-core",
  "crates/omx-plugin-codex",
  "crates/omx-plugin-claude",
  "crates/omx-cli",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/openmux/openmux"

[workspace.dependencies]
anstream = "1"
anstyle = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
comfy-table = "7"
directories = "6"
inquire = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
toml = "0.8"
