[workspace]
resolver = "3"
members = [
  "crates/prismux-core",
  "crates/prismux-app",
  "crates/prismux-menubar-ffi",
  "crates/prismux-plugin-codex",
  "crates/prismux-plugin-claude",
  "crates/prismux-cli",
]

[workspace.package]
edition = "2024"
version = "0.2.1"
license = "MIT"
repository = "https://github.com/hiQianFan/prismux"

[workspace.dependencies]
anstream = "1"
anstyle = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
comfy-table = "7"
inquire = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }
tempfile = "3"
thiserror = "2"
toml = "0.8"
toml_edit = "0.22"
