[package]
name = "omx-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
omx-core = { path = "../omx-core" }
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
