[package]
name = "omx-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
omx-core = { path = "../omx-core" }
omx-plugin-codex = { path = "../omx-plugin-codex" }

[[bin]]
name = "omx"
path = "src/main.rs"
