[package]
name = "omx-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anstream = { workspace = true }
anstyle = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
comfy-table = { workspace = true }
inquire = { workspace = true }
omx-core = { path = "../omx-core" }
omx-plugin-claude = { path = "../omx-plugin-claude" }
omx-plugin-codex = { path = "../omx-plugin-codex" }

[[bin]]
name = "omx"
path = "src/main.rs"
