[package]
name = "omx-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anstream = { workspace = true }
anstyle = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
comfy-table = { workspace = true }
inquire = { workspace = true }
omx-core = { path = "../omx-core" }
omx-app = { path = "../omx-app" }
omx-plugin-claude = { path = "../omx-plugin-claude" }
omx-plugin-codex = { path = "../omx-plugin-codex" }
omx-usage-tokscale = { path = "../omx-usage-tokscale" }
serde_json = { workspace = true }

[[bin]]
name = "omx"
path = "src/main.rs"
