[package]
name = "omx-menubar-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
omx-app = { path = "../omx-app" }
omx-core = { path = "../omx-core" }
omx-plugin-claude = { path = "../omx-plugin-claude" }
omx-plugin-codex = { path = "../omx-plugin-codex" }
omx-usage-tokscale = { path = "../omx-usage-tokscale" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
