[package]
name = "omx-plugin-codex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono = { workspace = true }
omx-core = { path = "../omx-core" }
serde_json = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
