[package]
name = "prismux-plugin-codex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono = { workspace = true }
prismux-core = { path = "../prismux-core" }
serde_json = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
